# Learn-to-Calibrate

./: README.md  nodelet_plugins.xml  package.xml
cam_cal_sim/: CMakeLists.txt  nodelet_plugins.xml  nodelet_plugins_client.xml  package.xml
cam_cal_sim/config/: panda_control.yaml
cam_cal_sim/include/: model_client.h  simulation_server.h
cam_cal_sim/launch/: action_srv.launch  action_srv_nodelet.launch  simple_camera_aprilgrid.launch  simple_camera_velocity.launch  vi_sensor_action_srv.launch  vi_sensor_aprilgrid.launch
cam_cal_sim/src/: RL_model_client.cpp  action_to_sim.cpp  action_to_sim_vi.cpp  model_client.cpp  move_camera_aprilgrid.cpp  move_camera_velocity.cpp  move_vi_aprilgrid.cpp  simulation_server.cpp
cam_cal_sim/srv/: actionSrv.srv
cam_cal_sim/worlds/: camera_imu.world
cam_cal_sim/xacro/: aprilgrid.xacro  cam_sim.urdf.xacro  checkerboard.model  simple_camera.gv  simple_camera_model.xacro  simple_camera_velocity.xacro  simple_camera_wide.xacro
franka_cal_sim/: CMakeLists.txt  action.txt  nodelet_plugins.xml  package.xml
franka_cal_sim/config/: config.yaml
franka_cal_sim/include/: model_client.h  simulation_server.h
franka_cal_sim/launch/: action_srv_nodelet.launch  action_srv_nodelet_checkerboard.launch  cam_imu_ext_che.launch  cam_imu_respawn.launch  cam_imu_together_checkerboard.launch  cam_int_respawn.launch  franka.launch  spawn.launch  spawn_2.launch  test_action_srv_nodelet_checkerboard.launch  test_cam_imu_together_checkerboard.launch
franka_cal_sim/python/: DDPG+RNN+separate.ipynb  DDPG+RNN.ipynb  MB_PSO_RL_algo.py  MB_PSO_grd_RL_algo.py  MB_PSO_grd_RL_algo_cam.py  MB_RL_algo.py  RL_agent3.py  RL_agent_imu_sac.py  RL_algo.py  RL_algo_hidden_simple_actor.py  RL_algo_long_test.py  RL_algo_test.py  RL_algo_test_cam.py  Untitled1.ipynb  action.txt  action_old.txt  action_old2.txt  action_tiny.txt  action_tiny2.txt  estimation_service_cam_ran_dist_respawn.py  estimation_service_server.py  estimation_service_server_cam_dist_respawn.py  estimation_service_server_cam_respawn (copy).py  estimation_service_server_cam_respawn.py  estimation_service_server_imu_respawn.py  estimation_service_server_imu_test.py  estimation_service_server_new.py  estimation_service_server_old.py  estimator.py  example_modfied-action-Copy1.ipynb  example_modfied-action.ipynb  intrinsics.yml  learning_curve.ipynb  model_based RL.ipynb  rand_actions.txt  requirement.txt  restore.txt  result.txt  sync_replay_optimizer_revised.py  test_result.txt  (+2 more)
franka_cal_sim/src/: initializer.cpp  model_client.cpp  simulation_server.cpp  simulation_server_01.cpp
franka_cal_sim/srv/: RLSrv.srv  actionSrv.srv  estimateSrv.srv
franka_cal_sim/worlds/: fast.world
franka_cal_sim/xacro/: aprilgrid.xacro
franka_cal_sim_single/: CMakeLists.txt
franka_cal_sim_single/config/: config.yaml  panda_control.yaml
franka_cal_sim_single/launch/: cam_che.launch  franka.launch
franka_cal_sim_single/python/: calibrator.py
franka_cal_sim_single/src/: model_client.cpp  simulation_server_01.cpp
franka_cal_sim_single/srv/: estimateSrv.srv  getBoardCenterSrv.srv  recordSrv.srv
franka_cal_sim_single/worlds/: fast.world
franka_ros/: README.md
include/: model_client.h  simulation_server.h
launch/: cam_che_real.launch  cam_imu_ext_che.launch  cam_imu_real.launch  kill.launch  spawn.launch  spawn_0.launch  spawn_controller.launch
launch/history/: cam_imu_ext_aprilgrid.launch  test_cam_imu_nodelet_checkerboard.launch
models/checkerboard/: generate_checkerboard.py
nodelet_rosbag/: CMakeLists.txt  README.md  nodelet_rosbag.launch  nodelet_rosbag.xml  package.xml
nodelet_rosbag/action/: Start.action  Subscribe.action
nodelet_rosbag/config/: rosbag.yaml
nodelet_rosbag/include/nodelet_rosbag/: nodelet_rosbag.h
nodelet_rosbag/src/: nodelet_rosbag.cpp
panda_moveit_config/: README.md
panda_moveit_config/config/: kinematics.yaml  panda_controllers.yaml  panda_gripper_controllers.yaml
panda_moveit_config/launch/: move_group.launch  moveit.rviz
python/: estimation_service_cam.py  estimation_service_cam_imu.py  estimation_service_server_imu.py  estimator.py
python/.ipynb_checkpoints/: RL_algo_sample_replay_new-checkpoint.py  estimation_service_server_imu_cam-checkpoint.py
python/algorithms/: MB_PSO_grd_RL_algo_act.py  MB_RL_algo.py  RL_algo.py  RL_algo_sac_Set_simplified_attention.py  RL_algo_sac_int.py  RL_algo_sac_int_ext.py  RL_algo_sac_pend.py  RL_algo_sac_simplied.py  SimplifiedCalEnv.py
python/experiment_data/: ext_experiment_data_hand  ext_experiment_data_previous  int_experiment data_rand  int_experiment_data_previous  int_experiment_data_random_traj  int_ext_experiment_data_hand  int_ext_learned_policy_joint
python/kalibr/: H_inverse.txt  b.txt  camchain-data.yaml  camchain-imucam-data.yaml  camchain-imucam-random_data.yaml  camchain-imucam-real_exp_data.yaml  camchain-imucam-real_exp_data_3.yaml  camchain-imucam-real_exp_data_7.yaml  camchain-imucam-real_exp_data_71.yaml  camchain-imucam-real_exp_data_7eef005.yaml  camchain-imucam-real_exp_data_7eef01.yaml  camchain-imucam-real_exp_data_7eef01_50wp.yaml  camchain-imucam-real_exp_data_7eef02.yaml  camchain-imucam-real_exp_data_7eef02_50wp.yaml  camchain-imucam-real_exp_data_7joint05.yaml  camchain-imucam-real_exp_data_7joint1.yaml  camchain-imucam-real_exp_data_7joint12.yaml  camchain-imucam-real_exp_data_7joint152.yaml  camchain-imucam-real_exp_data_7jointa1.yaml  camchain-policy_data.yaml  camchain-real_exp_data.yaml  camchain-real_exp_data_7.yaml  ground_truth.py  imu-real_exp_data.yaml  imu-real_exp_data_7eef005.yaml  imu-real_exp_data_7joint05.yaml  imu_adis16448.yaml  results-cam-data.txt  results-cam-policy_data.txt  results-cam-real_exp_data.txt  results-cam-real_exp_data_3.txt  results-cam-real_exp_data_7.txt  (+16 more)
random_numbers/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
random_numbers/include/random_numbers/: random_numbers.h
random_numbers/src/: random_numbers.cpp
rosbag-recorder/: README.md
src/: simulation_server.cpp
srv/: RLSrv.srv  actionSrv.srv  distortSrv.srv
(+186 files in other folders)
