<?xml version="1.0"?>
<package format="2">
  <name>franka_cal_sim_single</name>
  <version>0.0.0</version>
  <description>The franka_cal_sim_single package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yunke@todo.todo">yunke</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/franka_cal_sim</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>nodelet</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>random_numbers</build_depend>
  <build_export_depend>random_numbers</build_export_depend>
  <exec_depend>random_numbers</exec_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>std_srvs</exec_depend>
  <build_depend>nodelet</build_depend>
  <build_export_depend>nodelet</build_export_depend>
  <exec_depend>nodelet</exec_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <build_depend>moveit_core</build_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <exec_depend>moveit_core</exec_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <exec_depend>moveit_msgsmoveit_ros_planning_interface</exec_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_export_depend>moveit_ros_perception</build_export_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <build_depend>python-numpy</build_depend>
  <exec_depend>python-numpy</exec_depend>
  <build_depend>python-tensorflow</build_depend>
  <exec_depend>python-tensorflow</exec_depend>
  <build_depend>nodelet_rosbag</build_depend>
  <build_export_depend>nodelet_rosbag</build_export_depend>
  <exec_depend>nodelet_rosbag</exec_depend>
  <build_depend>rosbag_recorder</build_depend>
  <build_export_depend>rosbag_recorder</build_export_depend>
  <exec_depend>rosbag_recorder</exec_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_export_depend>eigen_catkin</build_export_depend>
  <exec_depend>eigen_catkin</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
