<?xml version="1.0"?>
<package>
  <name>nodelet_rosbag</name>
  <version>0.1.0</version>
  <description>The nodelet_rosbag package</description>

  <maintainer email="esteve@osrfoundation.org">Esteve Fernandez</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rosbag_storage</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_rosbag.xml"/>
  </export>
</package>
